add CRUD swagger UI all services
